force-app/main/default/objects/FoxSec_Audit_Snapshot__c/FoxSec_Audit_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Stores historical security audit snapshots for trend analysis and compliance reporting.</description>
    <label>FoxSec Audit Snapshot</label>
    <nameField>
        <displayFormat>SNAP-{0000000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FoxSec Audit Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>