force-app/main/default/objects/FoxSec_Audit_Snapshot__c/fields/Audit_Details__c.field-meta.xml
<CustomField>
    <fullName>Audit_Details__c</fullName>
    <description>JSON representation of all audit results for this snapshot.</description>
    <label>Audit Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>