force-app/main/default/objects/FoxSec_Audit_Snapshot__c/fields/Compliance_Score__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Score__c</fullName>
    <description>Compliance score percentage based on the selected template.</description>
    <label>Compliance Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>