force-app/main/default/objects/FoxSec_Audit_Snapshot__c/fields/Compliance_Template__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Template__c</fullName>
    <description>Compliance framework used for this audit (if any).</description>
    <label>Compliance Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>SOC2</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>HIPAA</fullName>
            </value>
            <value>
                <fullName>ISO27001</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>