force-app/main/default/objects/FoxSec_Audit_Snapshot__c/fields/Critical_Count__c.field-meta.xml
<CustomField>
    <fullName>Critical_Count__c</fullName>
    <description>Number of critical severity findings.</description>
    <defaultValue>0</defaultValue>
    <label>Critical Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>