force-app/main/default/objects/FoxSec_Audit_Snapshot__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <description>Letter grade based on health score (A, B, C, D, F).</description>
    <label>Grade</label>
    <length>1</length>
    <type>Text</type>
</CustomField>