force-app/main/default/objects/FoxSec_Audit_Snapshot__c/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <description>Overall security health score from 0 to 100.</description>
    <label>Health Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>