force-app/main/default/objects/FoxSec_Audit_Snapshot__c/fields/High_Count__c.field-meta.xml
<CustomField>
    <fullName>High_Count__c</fullName>
    <description>Number of high severity findings.</description>
    <defaultValue>0</defaultValue>
    <label>High Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>