force-app/main/default/objects/FoxSec_Audit_Snapshot__c/fields/Low_Count__c.field-meta.xml
<CustomField>
    <fullName>Low_Count__c</fullName>
    <description>Number of low severity findings.</description>
    <defaultValue>0</defaultValue>
    <label>Low Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>