force-app/main/default/objects/FoxSec_Audit_Snapshot__c/fields/Medium_Count__c.field-meta.xml
<CustomField>
    <fullName>Medium_Count__c</fullName>
    <description>Number of medium severity findings.</description>
    <defaultValue>0</defaultValue>
    <label>Medium Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>