force-app/main/default/objects/FoxSec_Audit_Snapshot__c/fields/Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Id__c</fullName>
    <description>Salesforce Organization ID where the audit was performed.</description>
    <externalId>true</externalId>
    <label>Org Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>