force-app/main/default/objects/FoxSec_Audit_Snapshot__c/fields/Pass_Count__c.field-meta.xml
<CustomField>
    <fullName>Pass_Count__c</fullName>
    <description>Number of passed audit checks.</description>
    <defaultValue>0</defaultValue>
    <label>Pass Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>