force-app/main/default/objects/FoxSec_Audit_Snapshot__c/fields/Run_By__c.field-meta.xml
<CustomField>
    <fullName>Run_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who triggered this audit snapshot.</description>
    <label>Run By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>FoxSec Audit Snapshots</relationshipLabel>
    <relationshipName>FoxSec_Audit_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>