force-app/main/default/objects/FoxSec_Audit_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <description>Date and time when the audit snapshot was captured.</description>
    <label>Snapshot Date</label>
    <type>DateTime</type>
</CustomField>