force-app/main/default/objects/FoxSec_Audit_Snapshot__c/fields/Total_Tests__c.field-meta.xml
<CustomField>
    <fullName>Total_Tests__c</fullName>
    <description>Total number of audit tests executed.</description>
    <defaultValue>0</defaultValue>
    <label>Total Tests</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>